--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mkdocs
+        pip install mkdocs mkdocs-material mkdocs-swagger-ui-tag
 
     - name: Run tests
       run: |
